--- a/common/src/main/res/layout/fragment_main.xml
+++ b/common/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_fragment_container"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
